# zewos

./: .gitignore  Cargo.toml  README.md
zewos/: Cargo.toml
zewos-core/: Cargo.toml
zewos-core/src/: derive.rs  errors.rs  fingerprint.rs  hash.rs  key.rs  lib.rs  logging.rs  metadata.rs  permissions.rs  signature.rs
zewos-dir/: Cargo.toml
zewos-dir/src/: dir.rs  encrypt.rs  file.rs  handlers.rs  lib.rs  logs.rs
zewos-storage/: Cargo.toml
zewos-storage/src/: backup.rs  cache.rs  compression.rs  errors.rs  index.rs  lib.rs  object.rs
zewos/src/: config.rs  lib.rs  storage.rs
