[workspace]
members = ["zewos", "zewos-core", "zewos-dir", "zewos-storage", "zewos-tests"]
default-members = ["zewos"]
resolver = "2"

[package]
name = "zewos"
version = "0.1.0"
edition = "2021"

[dependencies]
zewos-core = { path = "zewos-core" }
zewos-dir = { path = "zewos-dir" }
zewos-storage = { path = "zewos-storage" }

[lib]
name = "zewos"
path = "zewos/src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
