[package]
name = "zewos-core"
version = "0.1.0"
edition = "2021"
authors = ["Oleg Pogoraev <molniya213y@gmail.com>"]
description = "Core of the Zewos project"
license = "Apache-2.0"
repository = "https://github.com/oblivisheee/zewos/tree/master/zewos-core"

[dependencies]
thiserror = "1.0.63"

ecdsa = { version = "0.16.9", features = ["signing", "verifying"] }
p256 = "0.13.2"
rand = "0.8.5"
sha3 = "0.10.8"
tempfile = "3.12.0"
blake3 = "1.5.4"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.87"


[target.'cfg(windows)'.dependencies]
windows = "0.58.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.2", features = ["user"] }
