[package]
name = "zewos-storage"
version = "0.1.0"
edition = "2021"
authors = ["Oblivishee <molniya213y@example.com>"]
description = "A storage library for the Zewos project"
license = "Apache-2.0"
repository = "https://github.com/oblivishee/zewos/tree/master/zewos-storage"
keywords = ["storage", "database", "zewos"]
categories = ["database-implementations", "caching"]

[dependencies]
bincode = "1.3.3"
blake3 = "1.5.4"
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = { version = "6.0.1", features = ["serde"] }
hex = "0.4.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha3 = "0.10.8"
thiserror = "1.0.63"
zstd = "0.13.2"
zewos-core = { path = "../zewos-core" }
[dev-dependencies]
