[package]
name = "zewos-main"
version = "0.1.0"
edition = "2021"
authors = ["Oleg Pogoraev <molniya213y@gmail.com>"]
description = "Main library of the Zewos project"
license = "Apache-2.0"
repository = "https://github.com/oblivisheee/zewos/"

[dependencies]
zewos-core = { path = "../zewos-core" }
zewos-dir = { path = "../zewos-dir" }
zewos-storage = { path = "../zewos-storage" }

[dev-dependencies]
tempfile = "3.12.0"
